--- a/BlobLibrary/BlobLibrary.vcxproj
+++ b/BlobLibrary/BlobLibrary.vcxproj
@@ -148,15 +148,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Blob.h" />
-    <ClInclude Include="BlobADV.h" />
     <ClInclude Include="Equipment.h" />
+    <ClInclude Include="Skill.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Blob.cpp" />
-    <ClCompile Include="BlobADV.cpp" />
     <ClCompile Include="Equipment.cpp" />
+    <ClCompile Include="Skill.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
