--- a/BlobLibrary/BlobLibrary.vcxproj
+++ b/BlobLibrary/BlobLibrary.vcxproj
@@ -151,15 +151,17 @@
     <ClInclude Include="Blob.h" />
     <ClInclude Include="Equipment.h" />
     <ClInclude Include="MagicAccessory.h" />
-    <ClInclude Include="MagicAtt.h" />
+    <ClInclude Include="AttType.h" />
     <ClInclude Include="Skill.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Armor.cpp" />
     <ClCompile Include="Blob.cpp" />
     <ClCompile Include="Equipment.cpp" />
+    <ClCompile Include="MagicAccessory.cpp" />
     <ClCompile Include="Skill.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -167,6 +169,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
