Tests follow up + rm useless classes

--- a/BlobLibrary/BlobLibrary.vcxproj.filters
+++ b/BlobLibrary/BlobLibrary.vcxproj.filters
@@ -27,15 +27,6 @@
     <ClInclude Include="Equipment.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Armor.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Weapon.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="MagicAccessory.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Skill.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -56,13 +47,7 @@
     <ClCompile Include="Skill.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Armor.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Weapon.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="MagicAccessory.cpp">
+    <ClCompile Include="AttType.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
