--- a/BlobLibrary/BlobLibrary.vcxproj.filters
+++ b/BlobLibrary/BlobLibrary.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="MenuSpell.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="TextBox.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MenuSpell.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TextBox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
