--- a/BlobLibrary/BlobLibrary.vcxproj
+++ b/BlobLibrary/BlobLibrary.vcxproj
@@ -152,6 +152,11 @@
     <ClInclude Include="AttType.h" />
     <ClInclude Include="FightState.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="GlobalVar.h" />
+    <ClInclude Include="imconfig.h" />
+    <ClInclude Include="imgui-SFML.h" />
+    <ClInclude Include="imgui.h" />
+    <ClInclude Include="ImGuiManager.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuEndFight.h" />
     <ClInclude Include="MenuFight.h" />
@@ -169,6 +174,10 @@
     <ClCompile Include="Equipment.cpp" />
     <ClCompile Include="FightState.cpp" />
     <ClCompile Include="GameState.cpp" />
+    <ClCompile Include="imgui-SFML.cpp" />
+    <ClCompile Include="imgui.cpp" />
+    <ClCompile Include="ImGuiManager.cpp" />
+    <ClCompile Include="imgui_draw.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuEndFight.cpp" />
     <ClCompile Include="MenuFight.cpp" />
