--- a/BlobLibrary/BlobLibrary.vcxproj
+++ b/BlobLibrary/BlobLibrary.vcxproj
@@ -72,6 +72,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>C:\Software\ProjetsVisualStudio\ImGui\imgui-sfml-master;C:\Software\ProjetsVisualStudio\ImGui\imgui-master;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
