--- a/BlobLibrary/BlobLibrary.vcxproj
+++ b/BlobLibrary/BlobLibrary.vcxproj
@@ -85,12 +85,13 @@
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Software\ProjetsVisualStudio\ImGui\imgui-master;C:\Software\ProjetsVisualStudio\ImGui\imgui-sfml-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -113,7 +114,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
@@ -154,10 +155,6 @@
     <ClInclude Include="FightState.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="GlobalVar.h" />
-    <ClInclude Include="imconfig.h" />
-    <ClInclude Include="imgui-SFML.h" />
-    <ClInclude Include="imgui.h" />
-    <ClInclude Include="ImGuiManager.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="MenuEndFight.h" />
     <ClInclude Include="MenuFight.h" />
@@ -175,10 +172,6 @@
     <ClCompile Include="Equipment.cpp" />
     <ClCompile Include="FightState.cpp" />
     <ClCompile Include="GameState.cpp" />
-    <ClCompile Include="imgui-SFML.cpp" />
-    <ClCompile Include="imgui.cpp" />
-    <ClCompile Include="ImGuiManager.cpp" />
-    <ClCompile Include="imgui_draw.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="MenuEndFight.cpp" />
     <ClCompile Include="MenuFight.cpp" />
